2016-05-26  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* src/adc.h: Update from Gnuk.
	* src/neug.c: Update from Gnuk.
	* src/usb_stm32f103.c: Update from Chopstx.
	* src/usb_lld.h: Update from Chopstx.
	* src/sys.c: Update from Chopstx.
	* src/configure: Follow the change of USB API.
	* src/main.c (usb_cb_device_reset, usb_cb_ctrl_write_finish)
	(vcom_port_data_setup, usb_cb_setup, usb_cb_get_descriptor)
	(usb_cb_interface, usb_intr): Follow the change of USB API.
	(VCOM_FEATURE_BUS_POWERED): New.
	(usb_cb_handle_event): Clean up.
	(usb_cb_tx_done, usb_cb_rx_ready): New.
	(main): Use chopstx_poll.

2016-02-05   Niibe Yutaka  <gniibe@fsij.org>

	* src/configure: Add submodule check suggested by Elliott
	Mitchell.

2015-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.4.

2015-09-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (__main_stack_size__): Decrease stack size of
	exception handlers.
	(__process0_stack_size__): Decrease stack size of main.
	(__process1_stack_size__): Decrease stack size of led.
	(__process2_stack_size__): Increase stack size of rng.

	* src/main.c (usb_cb_device_reset): Stop the interface.

	* chopstx: Update to 0.10.

	* src/usb_stm32f103.c: Update from Gnuk.

2015-09-11  Niibe Yutaka  <gniibe@fsij.org>

	* tool/neug_upgrade.py (main): Loop until finding reGNUal device.

2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (get_adc_config): Add
	BOARD_ID_NITROKEY_START.

	* src/sys.h: Update from Chopstx.

2015-09-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_cb_device_reset): Fix bDeviceState on reset.

2015-09-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (CDC_CTRL_DTR): New.
	(usb_cb_ctrl_write_finish): Distinguish DTR accurately.
	(usb_cb_device_reset): Notify upper layer.

2015-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.3.

	* tool/neug_upgrade.py (neug.download, neug.execute)
	(regnual.download): Python3 fix.

	* tool/neug_check.py (main): Python3 fix.
