@@ -5,4 +5,4 @@ void adc_stop (void);
 extern uint32_t adc_buf[64];
 
 void adc_start_conversion (int offset, int count);
-int adc_wait_completion (chopstx_intr_t *intr);
+int adc_wait_completion (void);
